Language Solution Until I finish the Js, Js disabled and some small fixes along the way

--- a/indexNL.html
+++ b/indexNL.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./styles/Combined.css">
-    <!-- <script src="./js/script.js"></script> --> 
+    <!-- <script src="./js/script.js"></script> -->
 </head>
 <body>
     <header >
@@ -16,12 +16,12 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./pages/catering.html">Catering</a></li>
-                    <li><a href="./pages/dishes.html">Dishes</a></li>
-                    <li><a href="./pages/deserts.html">Deserts</a></li>
-                    <li><a href="./pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a href="./pages/contact.html">Contact Us</a></li>
+                    <li><a href="./indexNL.html">Thuis</a></li>
+                    <li><a href="./pages/catering-NL.html">Horeca</a></li>
+                    <li><a href="./pages/dishes-NL.html">Borden</a></li>
+                    <li><a href="./pages/deserts-NL.html">Woestijnen</a></li>
+                    <li><a href="./pages/special-ocasion-cakes-NL.html">Taarten voor speciale gelegenheden</a></li>
+                    <li><a href="./pages/contact-NL.html">Contact</a></li>
                     <div class = "lang">
                         <a href="./index.html" language='english' class="active">EN</a>
                         <a href="./indexNL.html" language ='dutch'>NL</a>
@@ -33,7 +33,7 @@
     </header>
     <main class = "blurred-mains">
         <!-- Short description of the site -->
-        <p class = "description">Welcome to Kazorki Gotunja. Our website is all to do with catering. Here you can find a wide variety food from Dishes to Special Ocasion Cakes and many more! If your interested in learning more please explore our webpage and for any inquires for ordering food please refer to our contacts page. Through these links you can find even more products we offer. Thank you very much for your visit to the site and enjoy everything we have to offer!</p>
+        <p class = "description">Welkom bij Kazorki Gotunja. Onze website heeft alles te maken met catering. Hier vindt u een grote verscheidenheid aan gerechten, van gerechten tot taarten voor speciale gelegenheden en nog veel meer! Als u meer wilt weten, bezoek dan onze webpagina en voor vragen over het bestellen van eten kunt u onze contactpagina raadplegen. Via deze links kunt u nog meer producten vinden die wij aanbieden. Hartelijk dank voor uw bezoek aan de site en geniet van alles wat we te bieden hebben!</p>
     </main>
     <footer>
         <!-- Footing with copyrights for integrity of content -->
