--- a/pages/catering-PL.html
+++ b/pages/catering-PL.html
@@ -13,12 +13,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Home</a></li>
-                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a id="first" href="../indexPL.html">Dom</a></li>
+                    <li><a id="second" href="../pages/catering-PL.html">Żywnościowy</a></li>
+                    <li><a id="third" href="../pages/dishes-PL.html">Dania</a></li>
+                    <li><a id="fourth" href="../pages/deserts-PL.html">Pustynie</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes-PL.html">Ciasta na specjalne okazje</a></li>
+                    <li><a id="sixth" href="../pages/contact-PL.html">Skontaktuj się z nami</a></li>
                     <div class = "lang">
                         <a href="../pages/catering.html" language='english' class="active">EN</a>
                         <a href="../pages/catering-NL.html" language ='dutch'>NL</a>
@@ -31,8 +31,8 @@
         <div id="secondary-nav">
             <nav>
                 <ul>
-                    <li><a href="./catering.html">Catering</a></li>
-                    <li><a href="./add-Recipe-catering.html">Place an Order</a></li>
+                    <li><a href="./catering-PL.html">Żywnościowy</a></li>
+                    <li><a href="./add-Recipe-catering-PL.html">Złożyć zamówienie</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,15 +43,15 @@
 
         <!-- Page subtitle and navigation list for the products -->
         <article id="products">
-            <h2 class="span-two">CATERING</h2>
+            <h2 class="span-two">ŻYWNOŚCIOWY</h2>
             <nav class = "span-two">
-                <label class="toggle" for="toggle-btn" lang="en-US"><span>Table of Contents</span><span id="down-arrow">ˇ</span></label>
+                <label class="toggle" for="toggle-btn" lang="en-US"><span>Spis treści</span><span id="down-arrow">ˇ</span></label>
                 <input type="checkbox" id="toggle-btn"> 
 
                 <ul>
-                    <li><a href="#Entry_1">Catering Possibility 1</a></li>
-                    <li><a href="#Entry_2">Catering Possibility 2</a></li>
-                    <li><a href="#Entry_3">Catering Possibility 3</a></li>
+                    <li><a href="#Entry_1">Możliwość Wyżywienia 1</a></li>
+                    <li><a href="#Entry_2">Możliwość Wyżywienia 2</a></li>
+                    <li><a href="#Entry_3">Możliwość Wyżywienia 3</a></li>
                     <li><a href="#Entry_4">Gyros</a></li>
                 </ul>
             </nav>
@@ -59,61 +59,61 @@
 
 <!----------------   Collection of products.    ------------------->
             <section id = "Entry_1">
-                <h3>Catering Possibility 1</h3>
-                <h4>Item No. 001</h4>
+                <h3>Możliwość Wyżywienia 1</h3>
+                <h4>Przedmiot nr. 001</h4>
                 <p>
-                    Various vegetables, hams, sauces, drinks and more.
+                    Różne warzywa, szynki, sosy, napoje i nie tylko.
                     <img src="../images/Catering/Catering-01.jpg" alt="Catering-01">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_2">
-                <h3>Catering Possibility 2</h3>
-                <h4>Item No. 002</h4>
+                <h3>Możliwość Wyżywienia 2</h3>
+                <h4>Przedmiot nr. 002</h4>
                 <p>
-                    Various vegetables, sushi, hams, sauces, drinks and more.
+                    Różne warzywa, sushi, szynki, sosy, napoje i nie tylko.
                     <img src="../images/Catering/Caterting-04.jpg" alt="Catering-04">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
             
             <section id = "Entry_3" class="span-two">
-                <h3>Catering Possibility 3</h3>
-                <h4>Item No. 003</h4>
+                <h3>Możliwość Wyżywienia 3</h3>
+                <h4>Przedmiot nr. 003</h4>
                 <p>
-                    Various vegetables, sushi, hams, sauces, drinks and more.
+                    Różne warzywa, sushi, szynki, sosy, napoje i nie tylko.
                     <img src="../images/Catering/Caterting-03.jpg" alt="Catering-03">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
             
             <section id = "Entry_4">
                 <h3>Gyros</h3>
-                <h4>Item No. 004</h4>
+                <h4>Przedmiot nr. 004</h4>
                 <p>
-                    Pork, chicken, beef, lamb, garlic, oregano, cumin, marjoram, thyme, rosemary, black pepper, and salt with the onion.
+                    Wieprzowina, kurczak, wołowina, jagnięcina, czosnek, oregano, kminek, majeranek, tymianek, rozmaryn, pieprz czarny, sól z cebulą.
                     <img src="../images/Catering/Caterting-02.jpg" alt="Catering-02">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
