--- a/pages/contact-NL.html
+++ b/pages/contact-NL.html
@@ -12,12 +12,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Home</a></li>
-                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a id="first" href="../indexNL.html">Thuis</a></li>
+                    <li><a id="second" href="../pages/catering-NL.html">Horeca</a></li>
+                    <li><a id="third" href="../pages/dishes-NL.html">Borden</a></li>
+                    <li><a id="fourth" href="../pages/deserts-NL.html">Woestijnen</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes-NL.html">Taarten voor speciale gelegenheden</a></li>
+                    <li><a id="sixth" href="../pages/contact-NL.html">Contact</a></li>
                     <div class = "lang">
                         <a href="../pages/contact.html" language='english' class="active">EN</a>
                         <a href="../pages/contact-NL.html" language ='dutch'>NL</a>
@@ -30,7 +30,7 @@
     <main class = "blurred-mains">
         <!-- Standard contacts -->
         <div id="contact-info-box">
-            <p>Welcome to our contacts here you can contact us via our Email, Phone and or go to our Facebook page. Through these links you can place orders and find more of our products. You can also make speical requests (e.g for allergies or a different number for a cake!) </p>
+            <p>Welkom bij onze contacten. Hier kunt u contact met ons opnemen via e-mail, telefoon en/of ga naar onze Facebook-pagina. Via deze links kunt u bestellingen plaatsen en meer van onze producten vinden. Ook kun je speciale wensen doorgeven (bijvoorbeeld voor allergieën of een ander nummer voor een taart!) </p>
         </div>
 
         <address>
@@ -39,14 +39,14 @@
                 <p>kaczorki.gotuja@gmail.com</p>
             </div>
             <div>
-                <p>Phone</p>
+                <p>GSM</p>
                 <p id="phone-num">0466297146</p>
             </div>
         </address>
         
         <!-- Social media -->
         <address class="icons">
-            <p>Social Media</p>
+            <p>Sociale Media</p>
             <div>
                 <a href="https://www.facebook.com/profile.php?id=100063786393922">
                     <img src="../images/icons/facebook.svg" alt="Facebook">
