--- a/pages/add-Recipe-catering.html
+++ b/pages/add-Recipe-catering.html
@@ -19,9 +19,9 @@
                     <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
                     <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
                     <div class = "lang">
-                        <a href="#" language='english' class="active">EN</a>
-                        <a href="#" language ='dutch'>NL</a>
-                        <a href="#" language ='polish'>PL</a>
+                        <a href="../pages/add-Recipe-catering.html" language='english' class="active">EN</a>
+                        <a href="../pages/add-Recipe-catering-NL.html" language ='dutch'>NL</a>
+                        <a href="../pages/add-Recipe-catering-PL.html" language ='polish'>PL</a>
                     </div>
                 </ul>
             </nav>            
