--- a/pages/catering-NL.html
+++ b/pages/catering-NL.html
@@ -13,12 +13,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Home</a></li>
-                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a id="first" href="../indexNL.html">Thuis</a></li>
+                    <li><a id="second" href="../pages/catering-NL.html">Horeca</a></li>
+                    <li><a id="third" href="../pages/dishes-NL.html">Borden</a></li>
+                    <li><a id="fourth" href="../pages/deserts-NL.html">Woestijnen</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes-NL.html">Taarten voor speciale gelegenheden</a></li>
+                    <li><a id="sixth" href="../pages/contact-NL.html">Contact</a></li>
                     <div class = "lang">
                         <a href="../pages/catering.html" language='english' class="active">EN</a>
                         <a href="../pages/catering-NL.html" language ='dutch'>NL</a>
@@ -31,8 +31,8 @@
         <div id="secondary-nav">
             <nav>
                 <ul>
-                    <li><a href="./catering.html">Catering</a></li>
-                    <li><a href="./add-Recipe-catering.html">Place an Order</a></li>
+                    <li><a href="./catering-NL.html">Horeca</a></li>
+                    <li><a href="./add-Recipe-catering-NL.html">Een bestelling plaatsen</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,15 +43,15 @@
 
         <!-- Page subtitle and navigation list for the products -->
         <article id="products">
-            <h2 class="span-two">CATERING</h2>
+            <h2 class="span-two">HORECA</h2>
             <nav class = "span-two">
-                <label class="toggle" for="toggle-btn" lang="en-US"><span>Table of Contents</span><span id="down-arrow">ˇ</span></label>
+                <label class="toggle" for="toggle-btn" lang="en-US"><span>Inhoudsopgave</span><span id="down-arrow">ˇ</span></label>
                 <input type="checkbox" id="toggle-btn"> 
 
                 <ul>
-                    <li><a href="#Entry_1">Catering Possibility 1</a></li>
-                    <li><a href="#Entry_2">Catering Possibility 2</a></li>
-                    <li><a href="#Entry_3">Catering Possibility 3</a></li>
+                    <li><a href="#Entry_1">Cateringmogelijkheid 1</a></li>
+                    <li><a href="#Entry_2">Cateringmogelijkheid 2</a></li>
+                    <li><a href="#Entry_3">Cateringmogelijkheid 3</a></li>
                     <li><a href="#Entry_4">Gyros</a></li>
                 </ul>
             </nav>
@@ -59,61 +59,61 @@
 
 <!----------------   Collection of products.    ------------------->
             <section id = "Entry_1">
-                <h3>Catering Possibility 1</h3>
-                <h4>Item No. 001</h4>
+                <h3>Cateringmogelijkheid 1</h3>
+                <h4>Artikelnr. 001</h4>
                 <p>
-                    Various vegetables, hams, sauces, drinks and more.
+                    Diverse groenten, hammen, sauzen, drankjes en meer.
                     <img src="../images/Catering/Catering-01.jpg" alt="Catering-01">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Prijzen variëren en worden bij aankoop bepaald! Raadpleeg onze contactpagina voor meer informatie!
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact-NL.html'">Contact</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_2">
-                <h3>Catering Possibility 2</h3>
-                <h4>Item No. 002</h4>
+                <h3>Cateringmogelijkheid 2</h3>
+                <h4>Artikelnr. 002</h4>
                 <p>
-                    Various vegetables, sushi, hams, sauces, drinks and more.
+                    Diverse groenten, sushi, hammen, sauzen, drankjes en meer.
                     <img src="../images/Catering/Caterting-04.jpg" alt="Catering-04">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Prijzen variëren en worden bij aankoop bepaald! Raadpleeg onze contactpagina voor meer informatie!
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact-NL.html'">Contact</button>
                     </div>
                 </div>
             </section> 
             
             <section id = "Entry_3" class="span-two">
-                <h3>Catering Possibility 3</h3>
-                <h4>Item No. 003</h4>
+                <h3>ateringmogelijkheid 3</h3>
+                <h4>Artikelnr. 003</h4>
                 <p>
-                    Various vegetables, sushi, hams, sauces, drinks and more.
+                    Diverse groenten, sushi, hammen, sauzen, drankjes en meer.
                     <img src="../images/Catering/Caterting-03.jpg" alt="Catering-03">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Prijzen variëren en worden bij aankoop bepaald! Raadpleeg onze contactpagina voor meer informatie!
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact-NL.html'">Contact</button>
                     </div>
                 </div>
             </section> 
             
             <section id = "Entry_4">
                 <h3>Gyros</h3>
-                <h4>Item No. 004</h4>
+                <h4>Artikelnr. 004</h4>
                 <p>
-                    Pork, chicken, beef, lamb, garlic, oregano, cumin, marjoram, thyme, rosemary, black pepper, and salt with the onion.
+                    Varkensvlees, kip, rundvlees, lamsvlees, knoflook, oregano, komijn, marjolein, tijm, rozemarijn, zwarte peper en zout met de ui.
                     <img src="../images/Catering/Caterting-02.jpg" alt="Catering-02">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Prijzen variëren en worden bij aankoop bepaald! Raadpleeg onze contactpagina voor meer informatie!
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact-NL.html'">Contact</button>
                     </div>
                 </div>
             </section> 
