--- a/pages/contact-PL.html
+++ b/pages/contact-PL.html
@@ -12,12 +12,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Home</a></li>
-                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a id="first" href="../indexPL.html">Dom</a></li>
+                    <li><a id="second" href="../pages/catering-PL.html">Żywnościowy</a></li>
+                    <li><a id="third" href="../pages/dishes-PL.html">Dania</a></li>
+                    <li><a id="fourth" href="../pages/deserts-PL.html">Pustynie</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes-PL.html">Ciasta na specjalne okazje</a></li>
+                    <li><a id="sixth" href="../pages/contact-PL.html">Skontaktuj się z nami</a></li>
                     <div class = "lang">
                         <a href="../pages/contact.html" language='english' class="active">EN</a>
                         <a href="../pages/contact-NL.html" language ='dutch'>NL</a>
@@ -30,7 +30,7 @@
     <main class = "blurred-mains">
         <!-- Standard contacts -->
         <div id="contact-info-box">
-            <p>Welcome to our contacts here you can contact us via our Email, Phone and or go to our Facebook page. Through these links you can place orders and find more of our products. You can also make speical requests (e.g for allergies or a different number for a cake!) </p>
+            <p>Witamy w naszych kontaktach, tutaj możesz skontaktować się z nami za pośrednictwem naszego e-maila, telefonu i/lub przejść na naszą stronę na Facebooku. Za pomocą tych linków możesz składać zamówienia i znajdować więcej naszych produktów. Można również składać życzenia specjalne (np. na alergie lub inny numer ciasta!)</p>
         </div>
 
         <address>
@@ -39,14 +39,14 @@
                 <p>kaczorki.gotuja@gmail.com</p>
             </div>
             <div>
-                <p>Phone</p>
+                <p>Telefon</p>
                 <p id="phone-num">0466297146</p>
             </div>
         </address>
         
         <!-- Social media -->
         <address class="icons">
-            <p>Social Media</p>
+            <p>Media Społecznościowe</p>
             <div>
                 <a href="https://www.facebook.com/profile.php?id=100063786393922">
                     <img src="../images/icons/facebook.svg" alt="Facebook">
