--- a/pages/dishes-PL.html
+++ b/pages/dishes-PL.html
@@ -13,12 +13,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Home</a></li>
-                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dishes</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
+                    <li><a id="first" href="../indexPL.html">Dom</a></li>
+                    <li><a id="second" href="../pages/catering-PL.html">Żywnościowy</a></li>
+                    <li><a id="third" href="../pages/dishes-PL.html">Dania</a></li>
+                    <li><a id="fourth" href="../pages/deserts-PL.html">Pustynie</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes-PL.html">Ciasta na specjalne okazje</a></li>
+                    <li><a id="sixth" href="../pages/contact-PL.html">Skontaktuj się z nami</a></li>
                     <div class = "lang">
                         <a href="../pages/dishes.html" language='english' class="active">EN</a>
                         <a href="../pages/dishes-NL.html" language ='dutch'>NL</a>
@@ -31,8 +31,8 @@
         <div id="secondary-nav">
             <nav>
                 <ul>
-                    <li><a href="./dishes.html">Dishes</a></li>
-                    <li><a href="./add-Recipe-dishes.html">Place an Order</a></li>
+                    <li><a href="./dishes-PL.html">Dania</a></li>
+                    <li><a href="./add-Recipe-dishes-PL.html">Złożyć zamówienie</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,9 +43,9 @@
         
         <!-- Page subtitle and navigation list for the products -->
         <article id="products">
-            <h2 class="span-two">DISHES</h2>
+            <h2 class="span-two">DANIA</h2>
             <nav class = "span-two">
-                <label class="toggle" for="toggle-btn" lang="en-US"><span>Table of Contents</span><span id="down-arrow">ˇ</span></label>
+                <label class="toggle" for="toggle-btn" lang="en-US"><span>Spis treści</span><span id="down-arrow">ˇ</span></label>
                 <input type="checkbox" id="toggle-btn"> 
 
                 <ul>
@@ -71,45 +71,45 @@
 
             <section id = "Entry_5" class="span-right">
                 <h3>Pierogi Ruskie</h3>
-                <h4>Item No. 005</h4>
+                <h4>Przedmiot nr. 005</h4>
                 <p>
-                    With Potatos and Onion.
+                    Z Ziemniakami i Cebulą.
                     <img src="../images/Dishes/Dishes-01.jpg" alt="Dishes-01">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_6" class="span-two">
                 <h3>Bigos</h3>
-                <h4>Item No. 006</h4>
+                <h4>Przedmiot nr. 006</h4>
                 <p>
-                    Sauerkraut.
+                    Kapusta kiszona.
                     <img src="../images/Dishes/Dishes-06.jpg" alt="Dishes-02">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_7">
                 <h3>Uszka</h3>
-                <h4>Item No. 007</h4>
+                <h4>Przedmiot nr. 007</h4>
                 <p>
-                    Mushrooms.
+                    Pieczarka
                     <img src="../images/Dishes/Dishes-03.jpg" alt="Dishes-03">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -125,45 +125,45 @@
 
             <section id = "Entry_8" class="span-two">
                 <h3>Pierogi</h3>
-                <h4>Item No. 008</h4>
+                <h4>Przedmiot nr. 008</h4>
                 <p>
                     Sample Top Text.
                     <img src="../images/Dishes/Dishes-04.jpg" alt="Dishes-04">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_9">
                 <h3>Barszcz Czerwony</h3>
-                <h4>Item No. 009</h4>
+                <h4>Przedmiot nr. 009</h4>
                 <p>
-                    Beetroot.
+                    Burak.
                     <img src="../images/Dishes/Dishes-05.jpg" alt="Dishes-05">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
 
             <section id = "Entry_10">
                 <h3>Kluski Parowe</h3>
-                <h4>Item No. 010</h4>
+                <h4>Przedmiot nr. 010</h4>
                 <p>
-                    With bigos and sauce.
+                    Z bigosem i sosem.
                     <img src="../images/Dishes/Dishes-02.jpg" alt="Dishes-06">
-                    *Prices vary and are to be determined at purchase! Please refer to our contacts page to find out more!
+                    *Ceny są różne i należy je ustalić przy zakupie! Aby dowiedzieć się więcej, odwiedź naszą stronę kontaktową! 
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Contact Us</button>
+                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>         
