Small fix for the Polish Contact Button

--- a/pages/catering-PL.html
+++ b/pages/catering-PL.html
@@ -68,7 +68,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -83,7 +83,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
@@ -98,7 +98,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
@@ -113,7 +113,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
