--- a/pages/deserts-PL.html
+++ b/pages/deserts-PL.html
@@ -77,7 +77,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -92,7 +92,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -107,7 +107,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -122,7 +122,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>  
@@ -137,7 +137,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -152,7 +152,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>  
@@ -167,7 +167,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
@@ -182,7 +182,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -197,7 +197,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>  
@@ -212,7 +212,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -227,7 +227,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -242,7 +242,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -257,7 +257,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
