--- a/pages/dishes-PL.html
+++ b/pages/dishes-PL.html
@@ -79,7 +79,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -94,7 +94,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -109,7 +109,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -133,7 +133,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -148,7 +148,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -163,7 +163,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>         
