--- a/pages/special-ocasion-cakes-PL.html
+++ b/pages/special-ocasion-cakes-PL.html
@@ -75,7 +75,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -90,7 +90,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -105,7 +105,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -120,7 +120,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -144,7 +144,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -159,7 +159,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -183,7 +183,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -198,7 +198,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -213,7 +213,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
@@ -228,7 +228,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section>
@@ -243,7 +243,7 @@
                 </p>
                 <div class = "button-container">
                     <div class = "vertical-center-button">
-                        <button onclick="window.location.href='./contact.html'">Skontaktuj się z nami</button>
+                        <button onclick="window.location.href='./contact-PL.html'">Skontaktuj się z nami</button>
                     </div>
                 </div>
             </section> 
