Minor Polish Fix

--- a/pages/add-Recipe-dishes-PL.html
+++ b/pages/add-Recipe-dishes-PL.html
@@ -12,7 +12,7 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../indexPL.html">Home</a></li>
+                    <li><a id="first" href="../indexPL.html">Dom</a></li>
                     <li><a id="second" href="../pages/catering-PL.html">Żywnościowy</a></li>
                     <li><a id="third" href="../pages/dishes-PL.html">Dania</a></li>
                     <li><a id="fourth" href="../pages/deserts-PL.html">Pustynie</a></li>
