fixed a nav bug

--- a/pages/add-Recipe-dishes-PL.html
+++ b/pages/add-Recipe-dishes-PL.html
@@ -19,9 +19,9 @@
                     <li><a id="fifth" href="../pages/special-ocasion-cakes-PL.html">Ciasta na specjalne okazje</a></li>
                     <li><a id="sixth" href="../pages/contact-PL.html">Skontaktuj się z nami</a></li>
                     <div class = "lang">
-                        <a href="#" language='english' class="active">EN</a>
-                        <a href="#" language ='dutch'>NL</a>
-                        <a href="#" language ='polish'>PL</a>
+                        <a href="../pages/add-Recipe-dishes.html" language='english' class="active">EN</a>
+                        <a href="../pages/add-Recipe-dishes-NL.html" language ='dutch'>NL</a>
+                        <a href="../pages/add-Recipe-dishes-PL.html" language ='polish'>PL</a>
                     </div>
                 </ul>
             </nav>            
