--- a/pages/add-Recipe-dishes.html
+++ b/pages/add-Recipe-dishes.html
@@ -12,12 +12,12 @@
             <div><h1>Kaczorki Gotują</h1></div>
             <nav>
                 <ul>
-                    <li><a id="first" href="../index.html">Dom</a></li>
-                    <li><a id="second" href="../pages/catering.html">Żywnościowy</a></li>
-                    <li><a id="third" href="../pages/dishes.html">Dania</a></li>
-                    <li><a id="fourth" href="../pages/deserts.html">Pustynie</a></li>
-                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Ciasta na specjalne okazje</a></li>
-                    <li><a id="sixth" href="../pages/contact.html">Skontaktuj się z nami</a></li>
+                    <li><a id="first" href="../index.html">Home</a></li>
+                    <li><a id="second" href="../pages/catering.html">Catering</a></li>
+                    <li><a id="third" href="../pages/dishes.html">Dish</a></li>
+                    <li><a id="fourth" href="../pages/deserts.html">Deserts</a></li>
+                    <li><a id="fifth" href="../pages/special-ocasion-cakes.html">Special Ocasion Cakes</a></li>
+                    <li><a id="sixth" href="../pages/contact.html">Contact Us</a></li>
                     <div class = "lang">
                         <a href="../pages/add-Recipe-dishes.html" language='english' class="active">EN</a>
                         <a href="../pages/add-Recipe-dishes-NL.html" language ='dutch'>NL</a>
